--- a/templates/index.html
+++ b/templates/index.html
@@ -9,5 +9,15 @@
     ></script>
     <script src="https://unpkg.com/htmx.org@1.9.12/dist/ext/sse.js"></script>
   </head>
-  <div hx-ext="sse" sse-connect="/post/sse" sse-swap="message"></div>
+  <form id="post" hx-post="/">
+    <input type="text" name="body" />
+    <input type="text" name="author" />
+    <button type="submit">Submit</button>
+  </form>
+  <div hx-ext="sse" sse-connect="/sse">
+    <div sse-swap="positive_body"></div>
+    <div sse-swap="positive_author"></div>
+    <div sse-swap="negative_body"></div>
+    <div sse-swap="negative_author"></div>
+  </div>
 </html>
